# Goodcontact

./: .replit  agricultural_leasing_(ijarah)_normal.mp3_transcription.json  check_azure_containers.py  check_azure_sql.py  check_file.py  check_saved_file_size.py  check_sql_server_tables.js  check_tables.ts  create_azure_tables.py  deepgram_response.json  deepgram_response_debug.py  deepgram_response_full.json  direct_transcribe.py  direct_transcribe_db.py  file_size_issue_findings.md  flask_db_test.py  package-lock.json  package.json  project_state.md  pyproject.toml  real_azure_test.py  sql_insert_update_test.py  standalone_transcribe.py  successful_transcription_result.json  test_api_transcribe.py  test_azure_sql_tds_version.py  test_direct_rest_api.py  test_direct_transcribe.py  test_endpoint_comparison.py  test_full_workflow.py  test_insert_log.py  test_original_endpoint.py  test_paragraphs_sentences.py  test_real_azure_file.py  test_sas_gen.py  test_sas_url.py  test_sql_connection.py  test_transcribe_v2.py  test_transcription_integration.py  unified_sql_test.py
attached_assets/: Pasted--usr-bin-env-python3-Transcribe-Audio-File-using-Deepgram-s-API-A-simple-script-to-transcribe-1746934618126.txt  Pasted-Call-Center-Project-Use-case-I-need-a-connection-to-azure-storage-AZURE-STORAGE-ACCOUNT--1746919454210.txt  Pasted-Call-Center-Project-Use-case-I-need-a-connection-to-azure-storage-AZURE-STORAGE-ACCOUNT--1746991316853.txt  critical file what i asked.txt  critical file you crated.txt  dg_class_call_summarization.py  dg_class_forbidden_phrases.py
client/: index.html
(+163 files in other folders)
